--- a/src/scss/specials.scss
+++ b/src/scss/specials.scss
@@ -2,6 +2,11 @@
   position: relative;
   z-index: 100;
 
+
+  @media (max-width: toEm(400)) {
+    margin-top: -30px;
+  }
+
   /* .specials__container */
   &__container {}
 
@@ -213,6 +218,7 @@
       &::before {
         content: '';
         position: absolute;
+        margin-top: 2px;
         width: 3px;
         height: 3px;
         border-radius: 50%;
