--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -1,4 +1,5 @@
 .pricing {
+  @include adaptiveValue("padding-top", 150, 80);
 
   /* .pricing__container */
   &__container {}
@@ -15,16 +16,26 @@
     grid-template-columns: 1fr 59.435%;
 
     @include adaptiveValue("gap", 114, 40);
+
+    @media (max-width:$mobile){
+       grid-template-columns: auto;
+    }
   }
 
   /* .pricing__media */
   &__media {
     img {
       max-width: 100%;
-
+      display: block;
+      margin: 0 auto;
       border-radius: 20px;
 
       @include adaptiveValue("margin-bottom", 36, 20);
+    }
+
+    @media (max-width:$mobile){
+       grid-row: 2;
+      // justify-items: center;
     }
   }
 
