--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -325,3 +325,36 @@
     margin: 0;
   }
 }
+
+
+
+
+
+
+
+.map-container {
+  width: 100%;
+  height: 400px;
+  margin: 20px 0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+/* Адаптивность */
+@media (max-width: 768px) {
+  .map-container {
+    height: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  .map-container {
+    height: 250px;
+  }
+}
