--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -334,27 +334,39 @@
 
 .map-container {
   width: 100%;
-  height: 400px;
+  height: 353px;
   margin: 20px 0;
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
+
+  @media (max-width:$mobileSmall){
+     height: 280px; 
+  }
+}
+
+.map-widget-content-view__balloon {
+  display: none !important;
+}
+
+.map-widget-layout-view__maps-links {
+  display: none !important;
 }
 
 .map-container iframe {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   border: none;
 }
 
-/* Адаптивность */
-@media (max-width: 768px) {
-  .map-container {
-    height: 300px;
-  }
-}
+// /* Адаптивность */
+// @media (max-width: 768px) {
+//   .map-container {
+//     height: 300px;
+//   }
+// }
 
-@media (max-width: 480px) {
-  .map-container {
-    height: 250px;
-  }
-}
+// @media (max-width: 480px) {
+//   .map-container {
+//     height: 250px;
+//   }
+// }
